# AutomatedReasoning

./: .gitignore  Cargo.toml
src/: classes.rs  consts.rs  files.rs  input.rs  main.rs  parser.rs  test.rs  test_input.rs  tools.rs
src/classes/: clause.rs  decision.rs  file.rs  formula.rs  formula_node.rs  instance.rs  model.rs  solver.rs  stats.rs
src/consts/: editor_types.rs  operators.rs  sat.rs  sat_results.rs
src/parser/: cnf.rs  tools.rs
src/tools/: clause_tools.rs
test/: 14351.cnf  fail.cnf  sat.cnf  test.cnf  test2.cnf  uf20-01.cnf
