[package]
name = "AutomatedReasoning"
version = "0.1.0"
edition = "2021"

[dependencies]
byte-unit = "5.1.4"
chrono = "0.4.31"
crossterm = "0.27.0"
memory-stats = "1.1.0"
rand = "0.8.5"
sorted-list = "0.2.0"
terminal-menu = "3.0.0"

[patch.crates-io]
terminal-menu = {path = "./patch/terminal-menu-rs"}

[profile.release]
debug = true
